--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script id="ze-snippet"
-    src="https://static.zdassets.com/ekr/snippet.js?key=78e1d7c1-9a29-4107-904f-f973a078fa54"> </script>
+  <!-- Start of nohup Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=78e1d7c1-9a29-4107-904f-f973a078fa54"> </script>
+<!-- End of nohup Zendesk Widget script -->
   <title>Vite App</title>
 </head>
 
